Fixed build getting stuck

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2680,7 +2680,8 @@ select.uk-form-width-xsmall {
 .uk-card {
   position: relative;
   box-sizing: border-box;
-  color: #000; }
+  -webkit-transition: box-shadow 0.1s ease-in-out;
+  transition: box-shadow 0.1s ease-in-out; }
 
 /* Sections
  ========================================================================== */
